[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://UpgradeManager.gd" type="Script" id=2]
[ext_resource path="res://assets/images/levelselect/goldstar.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/PixelTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/units/archeranim.png" type="Texture" id=5]
[ext_resource path="res://assets/images/units/knightanim.png" type="Texture" id=6]
[ext_resource path="res://assets/images/units/mageanim.png" type="Texture" id=7]
[ext_resource path="res://tilesets/BrightSands.tres" type="TileSet" id=8]

[node name="Level" index="0" instance=ExtResource( 1 )]

[node name="UpgradeManager" type="Node2D" parent="." index="0"]
script = ExtResource( 2 )

[node name="Star" type="Sprite" parent="UpgradeManager" index="0"]
position = Vector2( 49.1095, 102.711 )
z_index = 100
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ZIndex" type="Node2D" parent="UpgradeManager" index="1"]
z_index = 100

[node name="MoneyLabel" type="Label" parent="UpgradeManager/ZIndex" index="0"]
margin_left = 67.2595
margin_top = 94.1107
margin_right = 183.259
margin_bottom = 112.111
theme = ExtResource( 4 )
text = "Stars: 0/0"

[node name="TabContainer" type="TabContainer" parent="UpgradeManager" index="2"]
margin_left = 363.0
margin_top = 38.0
margin_right = 1009.0
margin_bottom = 585.0
theme = ExtResource( 4 )

[node name="Archers" type="Panel" parent="UpgradeManager/TabContainer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="ArcherDescription" type="Label" parent="UpgradeManager/TabContainer/Archers" index="0"]
margin_left = 13.0
margin_top = 14.0
margin_right = 629.0
margin_bottom = 197.0
text = "Description






Stats:
"
__meta__ = {
"_edit_lock_": true
}

[node name="ArcherData" type="Label" parent="UpgradeManager/TabContainer/Archers" index="1"]
margin_left = 26.8145
margin_top = 43.0
margin_right = 627.815
margin_bottom = 261.0
text = "Archers are defensive units trained to kite enemy hordes around the battlefield. 
Although their damage is low, they are hard to catch and kill. Pair them with tanks for
an effective pushing combination. 

"
__meta__ = {
"_edit_lock_": true
}

[node name="ArcherNames" type="Label" parent="UpgradeManager/TabContainer/Archers" index="2"]
margin_left = 26.0
margin_top = 189.0
margin_right = 111.0
margin_bottom = 407.0
text = "Health:

Armor:

Damage:

Group Size:

Upgrade $:

Build Cost: "

[node name="ArcherStats" type="Label" parent="UpgradeManager/TabContainer/Archers" index="3"]
margin_left = 122.0
margin_top = 189.0
margin_right = 144.0
margin_bottom = 407.0
text = "5

1

1

3"

[node name="ArcherUpgradeText" type="Label" parent="UpgradeManager/TabContainer/Archers" index="4"]
margin_left = 150.0
margin_top = 189.0
margin_right = 178.0
margin_bottom = 407.0
custom_colors/font_color = Color( 0.54902, 1, 0.498039, 1 )
text = "(+1)



(+1)

(+1)"

[node name="UpgradeArcherButton" type="Button" parent="UpgradeManager/TabContainer/Archers" index="5"]
margin_left = 460.0
margin_top = 450.0
margin_right = 617.0
margin_bottom = 489.0
text = "Upgrade Archers"

[node name="ArcherSprite" type="Sprite" parent="UpgradeManager/TabContainer/Archers" index="6"]
position = Vector2( -317, 216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="ArcherSprite2" type="Sprite" parent="UpgradeManager/TabContainer/Archers" index="7"]
position = Vector2( -274.646, 219.258 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="ArcherSprite3" type="Sprite" parent="UpgradeManager/TabContainer/Archers" index="8"]
position = Vector2( -299.895, 180.976 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="Tanks" type="Panel" parent="UpgradeManager/TabContainer" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0

[node name="KnightDescription" type="Label" parent="UpgradeManager/TabContainer/Tanks" index="0"]
margin_left = 13.0
margin_top = 14.0
margin_right = 629.0
margin_bottom = 200.0
text = "Description






Stats:
"
__meta__ = {
"_edit_lock_": true
}

[node name="KnightData" type="Label" parent="UpgradeManager/TabContainer/Tanks" index="1"]
margin_left = 26.8145
margin_top = 43.0
margin_right = 627.815
margin_bottom = 261.0
text = "Knights are slow-moving, stocky, and powerful fixtures of the battlefield. They are extremely durable and serve as the bread and butter of any army composition. "
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="KnightNames" type="Label" parent="UpgradeManager/TabContainer/Tanks" index="2"]
margin_left = 26.0
margin_top = 189.0
margin_right = 111.0
margin_bottom = 417.0
text = "Health:

Armor:

Damage:

Group Size:

Upgrade $:

Build Cost: "

[node name="KnightStats" type="Label" parent="UpgradeManager/TabContainer/Tanks" index="3"]
margin_left = 122.0
margin_top = 189.0
margin_right = 144.0
margin_bottom = 407.0
text = "5

1

1

3"

[node name="KnightUpgradeText" type="Label" parent="UpgradeManager/TabContainer/Tanks" index="4"]
margin_left = 150.0
margin_top = 189.0
margin_right = 178.0
margin_bottom = 407.0
custom_colors/font_color = Color( 0.54902, 1, 0.498039, 1 )
text = "(+1)



(+1)

(+1)"

[node name="UpgradeKnightButton" type="Button" parent="UpgradeManager/TabContainer/Tanks" index="5"]
margin_left = 460.0
margin_top = 450.0
margin_right = 617.0
margin_bottom = 489.0
text = "Upgrade Knights"

[node name="KnightSprite1" type="Sprite" parent="UpgradeManager/TabContainer/Tanks" index="6"]
position = Vector2( -317, 216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="KnightSprite2" type="Sprite" parent="UpgradeManager/TabContainer/Tanks" index="7"]
position = Vector2( -276.763, 219.095 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="KnightSprite3" type="Sprite" parent="UpgradeManager/TabContainer/Tanks" index="8"]
position = Vector2( -294.56, 181.18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="Mages" type="Panel" parent="UpgradeManager/TabContainer" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MageDescription" type="Label" parent="UpgradeManager/TabContainer/Mages" index="0"]
margin_left = 13.0
margin_top = 14.0
margin_right = 629.0
margin_bottom = 200.0
text = "Description






Stats:
"
__meta__ = {
"_edit_lock_": true
}

[node name="MageData" type="Label" parent="UpgradeManager/TabContainer/Mages" index="1"]
margin_left = 26.8145
margin_top = 43.0
margin_right = 627.815
margin_bottom = 261.0
text = "Mages are powerful offensive units designed to damage many units at once. 

With upgrades, they may be able to wield multiple spells and elements, and even summon powerful familiars."
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="MageNames" type="Label" parent="UpgradeManager/TabContainer/Mages" index="2"]
margin_left = 26.0
margin_top = 189.0
margin_right = 111.0
margin_bottom = 417.0
text = "Health:

Armor:

Damage:

Group Size:

Upgrade $:

Build Cost: "

[node name="MageStats" type="Label" parent="UpgradeManager/TabContainer/Mages" index="3"]
margin_left = 122.0
margin_top = 189.0
margin_right = 144.0
margin_bottom = 407.0
text = "5

1

1

3"

[node name="MageUpgradeText" type="Label" parent="UpgradeManager/TabContainer/Mages" index="4"]
margin_left = 150.0
margin_top = 189.0
margin_right = 178.0
margin_bottom = 407.0
custom_colors/font_color = Color( 0.54902, 1, 0.498039, 1 )
text = "(+1)



(+1)

(+1)"

[node name="UpgradeMage" type="Button" parent="UpgradeManager/TabContainer/Mages" index="5"]
margin_left = 460.0
margin_top = 450.0
margin_right = 617.0
margin_bottom = 489.0
text = "Upgrade Mages"

[node name="MageSprite3" type="Sprite" parent="UpgradeManager/TabContainer/Mages" index="6"]
position = Vector2( -275.99, 216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="MageSprite2" type="Sprite" parent="UpgradeManager/TabContainer/Mages" index="7"]
position = Vector2( -318.548, 215.226 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="MageSprite1" type="Sprite" parent="UpgradeManager/TabContainer/Mages" index="8"]
position = Vector2( -294.56, 181.18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
offset = Vector2( 35.5098, 2.77263 )
hframes = 5

[node name="Spells" type="Panel" parent="UpgradeManager/TabContainer" index="3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel" type="Panel" parent="UpgradeManager" index="3"]
margin_left = 27.0
margin_top = 82.0
margin_right = 240.0
margin_bottom = 169.0
__meta__ = {
"_edit_lock_": true
}

[node name="ResetUpgradesButton" type="Button" parent="UpgradeManager" index="4"]
margin_left = 32.0
margin_top = 125.0
margin_right = 236.0
margin_bottom = 163.0
theme = ExtResource( 4 )
text = "Reset Upgrades"
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnButton" type="Button" parent="UpgradeManager" index="5"]
margin_left = 6.0
margin_top = 5.0
margin_right = 209.0
margin_bottom = 52.0
theme = ExtResource( 4 )
text = "Return To Level Selection"
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" parent="." index="1"]
tile_set = ExtResource( 8 )
tile_data = PoolIntArray( -1, 0, 196608, -65536, 0, 196609, -65535, 0, 196609, -65534, 0, 458754, -65533, 2, 0, -65532, 2, 1, -65531, 2, 1, -65530, 2, 1, -65529, 2, 1, -65528, 2, 1, -65527, 2, 1, -65526, 2, 1, -65525, 2, 1, -65524, 2, 1, -65523, 2, 1, -65522, 2, 2, -65521, 0, 458752, -65520, 0, 196609, -65519, 0, 196609, -65518, 0, 196609, -65517, 0, 196609, -65516, 0, 196609, -65515, 0, 196610, 65535, 0, 262144, 0, 1, 262148, 1, 2, 0, 2, 2, 1, 3, 2, 1048577, 4, 2, 65537, 5, 2, 65537, 6, 2, 65537, 7, 2, 65537, 8, 2, 65537, 9, 2, 65537, 10, 2, 65537, 11, 2, 65537, 12, 2, 65537, 13, 2, 65537, 14, 2, 1048576, 15, 2, 1, 16, 2, 1, 17, 2, 2, 18, 1, 458752, 19, 1, 196609, 20, 1, 458754, 21, 0, 262144, 131071, 0, 524289, 65536, 2, 0, 65537, 2, 1048577, 65538, 2, 65537, 65539, 2, 65537, 65540, 2, 65537, 65541, 2, 65537, 65542, 2, 65537, 65543, 2, 65537, 65544, 2, 65537, 65545, 2, 65537, 65546, 2, 65537, 65547, 2, 65537, 65548, 2, 65537, 65549, 2, 65537, 65550, 2, 65537, 65551, 2, 65537, 65552, 2, 65537, 65553, 2, 1048576, 65554, 2, 1, 65555, 2, 1, 65556, 2, 2, 65557, 0, 524289, 196607, 2, 0, 131072, 2, 1048577, 131073, 2, 65537, 131074, 2, 65537, 131075, 2, 65537, 131076, 2, 65537, 131077, 2, 65537, 131078, 2, 65537, 131079, 2, 65537, 131080, 2, 65537, 131081, 2, 65537, 131082, 2, 65537, 131083, 2, 65537, 131084, 2, 65537, 131085, 2, 65537, 131086, 2, 65537, 131087, 2, 65537, 131088, 2, 65537, 131089, 2, 65537, 131090, 2, 65537, 131091, 2, 65537, 131092, 2, 1048576, 131093, 2, 2, 262143, 2, 65536, 196608, 2, 65537, 196609, 2, 983040, 196610, 2, 131073, 196611, 2, 131073, 196612, 2, 131073, 196613, 2, 983041, 196614, 2, 65537, 196615, 2, 65537, 196616, 2, 65537, 196617, 2, 65537, 196618, 2, 65537, 196619, 2, 65537, 196620, 2, 65537, 196621, 2, 65537, 196622, 2, 65537, 196623, 2, 65537, 196624, 2, 65537, 196625, 2, 65537, 196626, 2, 65537, 196627, 2, 65537, 196628, 2, 65537, 196629, 2, 65538, 327679, 2, 131072, 262144, 2, 786433, 262145, 2, 131074, 262146, 1, 3, 262147, 1, 4, 262148, 1, 2, 262149, 2, 65536, 262150, 2, 65537, 262151, 2, 65537, 262152, 2, 65537, 262153, 2, 65537, 262154, 2, 65537, 262155, 2, 65537, 262156, 2, 65537, 262157, 2, 65537, 262158, 2, 65537, 262159, 2, 65537, 262160, 2, 65537, 262161, 2, 65537, 262162, 2, 65537, 262163, 2, 65537, 262164, 2, 65537, 262165, 2, 65538, 393215, 0, 393217, 327680, 2, 524289, 327681, 1, 3, 327682, 1, 1048577, 327683, 1, 65544, 327684, 1, 65538, 327685, 2, 65536, 327686, 2, 65537, 327687, 2, 65537, 327688, 2, 65537, 327689, 2, 65537, 327690, 2, 65537, 327691, 2, 65537, 327692, 2, 65537, 327693, 2, 65537, 327694, 2, 65537, 327695, 2, 65537, 327696, 2, 65537, 327697, 2, 65537, 327698, 2, 65537, 327699, 2, 65537, 327700, 2, 65537, 327701, 2, 65538, 458751, 0, 1179648, 393216, 0, 2, 393217, 1, 1114112, 393218, 1, 131073, 393219, 1, 131076, 393220, 1, 1114113, 393221, 2, 131072, 393222, 2, 983041, 393223, 2, 65537, 393224, 2, 65537, 393225, 2, 65537, 393226, 2, 65537, 393227, 2, 65537, 393228, 2, 65537, 393229, 2, 65537, 393230, 2, 65537, 393231, 2, 65537, 393232, 2, 65537, 393233, 2, 65537, 393234, 2, 65537, 393235, 2, 65537, 393236, 2, 65537, 393237, 2, 65538, 524287, 0, 1114112, 458752, 0, 131074, 458753, 1, 524292, 458754, 0, 458752, 458755, 0, 196610, 458756, 1, 327683, 458757, 1, 458757, 458758, 2, 65536, 458759, 2, 65537, 458760, 2, 65537, 458761, 2, 65537, 458762, 2, 65537, 458763, 2, 65537, 458764, 2, 65537, 458765, 2, 65537, 458766, 2, 65537, 458767, 2, 65537, 458768, 2, 65537, 458769, 2, 65537, 458770, 2, 65537, 458771, 2, 65537, 458772, 2, 65537, 458773, 2, 65538, 589823, 0, 262144, 524288, 2, 0, 524289, 2, 2, 524290, 1, 262145, 524291, 0, 327680, 524292, 0, 458754, 524293, 2, 0, 524294, 2, 1048577, 524295, 2, 65537, 524296, 2, 65537, 524297, 2, 65537, 524298, 2, 65537, 524299, 2, 65537, 524300, 2, 65537, 524301, 2, 65537, 524302, 2, 65537, 524303, 2, 65537, 524304, 2, 65537, 524305, 2, 65537, 524306, 2, 65537, 524307, 2, 65537, 524308, 2, 65537, 524309, 2, 65538, 655359, 0, 262144, 589824, 2, 65536, 589825, 2, 1048576, 589826, 2, 1, 589827, 2, 1, 589828, 2, 1, 589829, 2, 1048577, 589830, 2, 65537, 589831, 2, 65537, 589832, 2, 65537, 589833, 2, 983040, 589834, 2, 131073, 589835, 2, 131073, 589836, 2, 131073, 589837, 2, 983041, 589838, 2, 65537, 589839, 2, 65537, 589840, 2, 65537, 589841, 2, 983040, 589842, 2, 131073, 589843, 2, 131073, 589844, 2, 131073, 589845, 2, 1114113, 720895, 0, 262144, 655360, 2, 65536, 655361, 2, 65537, 655362, 2, 65537, 655363, 2, 65537, 655364, 2, 65537, 655365, 2, 983040, 655366, 2, 131073, 655367, 2, 131073, 655368, 2, 131073, 655369, 2, 131074, 655370, 0, 0, 655371, 0, 2, 655372, 1, 262148, 655373, 2, 131072, 655374, 2, 786433, 655375, 2, 131073, 655376, 2, 131073, 655377, 2, 131074, 655378, 1, 458752, 655379, 1, 196612, 655380, 1, 458754, 655381, 2, 524289, 786431, 0, 262144, 720896, 2, 131072, 720897, 2, 786433, 720898, 2, 131073, 720899, 2, 131073, 720900, 2, 131073, 720901, 2, 131074, 720902, 0, 0, 720903, 0, 2, 720904, 1, 262145, 720905, 0, 0, 720906, 0, 1048577, 720907, 0, 1048582, 720908, 0, 1, 720909, 0, 2, 720910, 2, 524289, 720911, 0, 0, 720912, 0, 1, 720913, 0, 1, 720914, 0, 1, 720915, 0, 1, 720916, 0, 1, 720917, 0, 2, 851967, 0, 327680, 786432, 0, 458754, 786433, 2, 524289, 786434, 0, 458752, 786435, 0, 196609, 786436, 0, 196609, 786437, 0, 196609, 786438, 0, 1310724, 786439, 0, 1310723, 786440, 0, 196609, 786441, 0, 1310721, 786442, 0, 131076, 786443, 0, 131073, 786444, 0, 131076, 786445, 0, 1310723, 786446, 0, 196609, 786447, 0, 1310721, 786448, 0, 131073, 786449, 0, 131076, 786450, 0, 131076, 786451, 0, 131076, 786452, 0, 131073, 786453, 0, 131074 )

[node name="Camera" parent="." index="3"]
visible = false

[node name="GoldDisplay" parent="Canvas" index="0"]
visible = false

[node name="TimeDisplay" parent="Canvas" index="1"]
visible = false

[node name="ClickOptions" parent="Canvas" index="2"]
visible = false

[node name="Sprite" parent="Canvas" index="4"]
visible = false

[connection signal="pressed" from="UpgradeManager/TabContainer/Archers/UpgradeArcherButton" to="UpgradeManager" method="_on_UpgradeArcherButton_pressed"]
[connection signal="pressed" from="UpgradeManager/TabContainer/Tanks/UpgradeKnightButton" to="UpgradeManager" method="_on_UpgradeKnightButton_pressed"]
[connection signal="pressed" from="UpgradeManager/TabContainer/Mages/UpgradeMage" to="UpgradeManager" method="_on_UpgradeMage_pressed"]
[connection signal="pressed" from="UpgradeManager/ResetUpgradesButton" to="UpgradeManager" method="_on_ResetUpgradesButton_pressed"]
[connection signal="pressed" from="UpgradeManager/ReturnButton" to="UpgradeManager" method="_on_ReturnButton_pressed"]
